# metabot

./: .gitignore  Doxyfile.in  Makefile.am  README.md  config.h.in  configure.ac
include/: bot.h  metabot.h  net.h
src/: Makefile.am  bot.cpp  metabot.cpp  net.cpp
